--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
         </div>
         <div class="row2">
             <div class="buttons">
-                <button class="btn-lg" id="hit"  > Hit </button> 
-                <button class="btn-lg" id="stand" >Stand</button>
-                <button class="btn-lg" id="deal" >Deal</button>
+                <button class="btn-lg" id="hit"  > Hit </button>
+                <button class="btn-lg" id="fold"  > Fold </button> 
+                <button class="btn-lg" id="stand" > Stay </button>
+                <button class="btn-lg" id="deal" > Deal </button>
             </div>
         </div>
         <div class="row3">
